--- a/src/frontpage/FrontPage.css
+++ b/src/frontpage/FrontPage.css
@@ -1,3 +1,7 @@
+.body{
+    margin-top: 10%;
+}
+
 .firstblock{
     vertical-align: middle;
 }
@@ -5,4 +9,9 @@
 .firstimg {
     width: 100%;
     height: 300px;
+    border-radius: 5%;
+}
+
+.my-text{
+    color: white;
 }
