better layout for mobile and some text updates

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,12 +42,6 @@ h1, h2, h3, h4, h5, h6, p {
 .justify-space {
   justify-content: space-between;
 }
-/* Media query for screens smaller than 600px */
-@media (max-width: 600px) {
-  .flex {
-    flex-direction: column;
-  }
-}
 section {
   padding: 5rem 5rem;
 }
@@ -79,11 +73,6 @@ nav ul li {
 .header {
   justify-content: space-between;
   padding: 1.1rem 5rem 0rem 5rem;
-}
-.header h1 {
-  margin: auto;
-  font-size: 3rem;
-  font-weight: 500;
 }
 .header p {
   font-size: 0.8rem;
@@ -148,6 +137,11 @@ nav ul li {
   padding-top: 5rem;
 }
 
+.cover {
+  border-radius: 50%;
+
+}
+
 /* Footer */
 footer {
   padding: 2rem 5rem;
@@ -180,6 +174,7 @@ footer ul li {
     display: none;
   }
   .header {
+    width: 100%;
     padding: 2rem 2rem 0rem 2rem;
   }
   section {
@@ -187,6 +182,9 @@ footer ul li {
   }
   /* About */
   .about-card {
+    width: 100%;
+  }
+  .about-text {
     width: 100%;
   }
   .about-card div {
