Updates to website

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,9 +56,17 @@ button {
   cursor: pointer;
 }
 
+section {
+  padding-top: 8rem;
+}
+
 /* Header */
 nav {
   padding: 1.1rem 5rem;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 }
 nav .logo {
   font-size: 1.5rem;
@@ -89,13 +97,31 @@ nav ul li {
   cursor: pointer;
 }
 
-.inner-cover {
-  width: 100vw;
-  background-image: url('/william-marstrand/images/cover.png');
-  background-repeat: no-repeat;
-  background-position: center;
-  padding-top: 2rem;
-  padding-bottom: 30vh;
+.border-radius {
+  border-radius: 50%; 
+}
+
+.profile-picture {
+  padding-right: 2rem;
+}
+
+.profile-refs {
+  padding-top: 1rem;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project-card {
+  padding: 2rem;
+  margin-top: 0.5em;
+  border-radius: 0.5rem;
+  flex-basis: 100px;
+  max-width: 100%;
 }
 
 .column {
